tests/chainsaw-uninstall/_fixtures/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uninstall-test-ingress
  namespace: uninstall-test
  annotations:
    ngrok.com/mapping-strategy: "endpoints-verbose"
spec:
  ingressClassName: ngrok
  rules:
    - host: uninstall-test-ingress.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uninstall-test-svc
                port:
                  number: 80
